--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,17 +1,29 @@
-name: GitHub Actions Demo
-on: [push]
+name: Deploy with Docker
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-  Explore-GitHub-Actions:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          path: dspace
+      
+      - name: Change Directory
+        run: cd dspace
+      
+      - name: Compile
+        run: mvn clean package
+      
+      - name: Deploy Up
+        run: docker-compose -f "docker-compose.yml" up -d
+
+      - name: Down Down
+        run: docker-compose -f "docker-compose.yml" down
+
+     
