--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,6 +12,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
+      - name: Set Up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+          cache: 'maven'
+
       - name: Compile
         run: mvn clean package
       
