--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,13 +12,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: Set Up JDK 8
-        uses: actions/setup-java@v2
+      # - name: Set Up JDK 8
+      #  uses: actions/setup-java@v2
+      #  with:
+      #   java-version: '8'
+      #   distribution: 'adopt'
+      #   cache: 'maven'
+
+      - name: Set Up JDK 8 and Maven 3.6.3
+        uses: s4u/setup-maven-action@v1.2.1
         with:
           java-version: '8'
-          distribution: 'adopt'
-          cache: 'maven'
-
+          maven-version: '3.6.3'
+      
       - name: Compile
         run: mvn clean package
       
