Action para conexão SSH em servidor.

--- a/.github/workflows/deploy-ssh-actions.yml
+++ b/.github/workflows/deploy-ssh-actions.yml
@@ -17,4 +17,6 @@ jobs:
           # password: ${{ secrets.PASSWORD }}
           key: ${{ secrets.KEY }}
           script: |
-            sudo touch /opt/it_worked
+            mkdir dspace-source && cd dspace_source
+            git clone $ {{ secrets.REPOSITORY }}
+            
