--- a/.github/workflows/deploy-ssh-actions.yml
+++ b/.github/workflows/deploy-ssh-actions.yml
@@ -17,6 +17,6 @@ jobs:
           # password: ${{ secrets.PASSWORD }}
           key: ${{ secrets.KEY }}
           script: |
-            mkdir dspace-source && cd dspace_source
-            git clone $ {{ secrets.REPOSITORY }}
+            mkdir dspace_source && cd dspace_source
+            git clone ${{ secrets.REPOSITORY }}
             
