Action para conexão SSH em servidor.

--- a/.github/workflows/deploy-ssh-actions.yml
+++ b/.github/workflows/deploy-ssh-actions.yml
@@ -19,6 +19,6 @@ jobs:
           script: |
             rm -rf dspace_source
             mkdir dspace_source && cd dspace_source
-            git clone ${{ secrets.REPOSITORY }}
+            git clone ${{ secrets.REPOSITORY }} .
             ./dspace/build-dspace.sh
             
