Action para conexão SSH em servidor.

--- a/.github/workflows/deploy-ssh-actions.yml
+++ b/.github/workflows/deploy-ssh-actions.yml
@@ -20,5 +20,5 @@ jobs:
             rm -rf dspace_source
             mkdir dspace_source && cd dspace_source
             git clone ${{ secrets.REPOSITORY }} .
-            ./dspace/build-dspace.sh
+            sudo sh docker/dspace/build-dspace.sh
             
