--- a/.github/workflows/vpn-deploy.yml
+++ b/.github/workflows/vpn-deploy.yml
@@ -6,10 +6,12 @@ on:
 
 jobs:
   build:
-
     runs-on: self-hosted
-
+    
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout Release
+      - uses: actions/checkout@v3
+      - run: |
+          docker run hello-world
 
       
